--- a/conect/pom.xml
+++ b/conect/pom.xml
@@ -51,6 +51,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--devtools-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
