--- a/conect/pom.xml
+++ b/conect/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
+        <!--starter validation-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
